# DesignPatterns

./: CMakeLists.txt  LICENCE.md  README.md  STORIES.md  main.cpp
Behavioral/: CMakeLists.txt  Testers.h
Behavioral/ChainofResponsibility/: CMakeLists.txt  ChainofResponsibilityTest.cpp  ChainofResponsibilityTest.h  ChasingBoss.h  DungeonBoss.h  EnragingBoss.h  HeavyHittingBoss.h  ThreatResettingBoss.h
Behavioral/Command/: Armor.h  CMakeLists.txt  CommandTest.cpp  CommandTest.h  Enchanting.h  Engineering.h  GoblinGliderCommand.h  Jewelcrafting.h  MarkOfTheClawCommand.h  PrismaticSocketCommand.h  Profession.h  ProfessionCommand.h  ProfessionControl.h  RedSocketCommand.h  RocketsCommand.h  WordOfAgilityCommand.h
Behavioral/Interpreter/: CMakeLists.txt  Expression.h  InterpreterTest.cpp  InterpreterTest.h  Language.h  SentenceInterpreter.cpp  SentenceInterpreter.h  SingleWordInterpreter.h
Behavioral/Iterator/: CMakeLists.txt  IteratorTest.cpp  IteratorTest.h  MiniRaid.h  Player.h  RaidIterator.h
Behavioral/Mediator/: Boss.cpp  Boss.h  CMakeLists.txt  DamageDealer.h  Healer.h  MediatorTest.cpp  MediatorTest.h  Player.cpp  Player.h  RaidLeader.cpp  RaidLeader.h  Tank.h
Behavioral/Memento/: ArmorAppearance.h  CMakeLists.txt  MementoTest.cpp  MementoTest.h  PlayerArmor.h  TransmogMaster.h
Behavioral/Observer/: CMakeLists.txt  DamageDealer.h  DeadlyBossMods.h  Healer.h  ObserverTest.cpp  ObserverTest.h  Player.h  Tank.h
Behavioral/State/: BattleStance.h  BerserkerStance.h  CMakeLists.txt  DefensiveStance.h  StateTest.cpp  StateTest.h  Warrior.h  WarriorStance.h
Behavioral/Strategy/: CMakeLists.txt  DamageDealer.h  Hunter.h  Mage.h  PlayerClass.h  Rogue.h  StrategyTest.cpp  StrategyTest.h
Behavioral/TemplateMethod/: Alchemy.h  CMakeLists.txt  Jewelcrafting.h  Profession.h  TemplateMethodTest.cpp  TemplateMethodTest.h
Behavioral/Visitor/: ArmorVendor.h  CMakeLists.txt  FruitVendor.h  HungryTroll.cpp  HungryTroll.h  NoobWarrior.cpp  NoobWarrior.h  Player.h  TreeHugger.cpp  TreeHugger.h  Vendor.h  VisitorTest.cpp  VisitorTest.h
Creational/: CMakeLists.txt  Testers.h
Creational/Builder/: BuilderTest.cpp  BuilderTest.h  CMakeLists.txt  DruidBuilder.h  MageBuilder.h  PaladinBuilder.h  PlayerClass.cpp  PlayerClass.h  PlayerClassBuilder.h  ShamanBuilder.h  SpawnPoint.h
Creational/Factory/: CMakeLists.txt  DeathKnight.h  Druid.h  FactoryTest.cpp  FactoryTest.h  LookingForGroupTool.h  Paladin.h  PlateTeamFactory.h  PlayerClass.h  Rogue.h  StealthTeamFactory.h  Team.h  TeamFactory.h  Warrior.h
Creational/Prototype/: CMakeLists.txt  Hunter.h  LFGFactory.h  Monk.h  PlayerClassPrototype.h  PrototypeTest.cpp  PrototypeTest.h  Warlock.h
Creational/Singleton/: CMakeLists.txt  SingletonTest.cpp  SingletonTest.h  UltimatePlayerClass.h
Structural/: CMakeLists.txt  Testers.h
Structural/Adapter/: AdapterTest.cpp  AdapterTest.h  CMakeLists.txt  DamageDealer.h  Healer.h  HealerAdapter.h  HealerRotation.h  Hunter.h  Priest.h  Rogue.h
Structural/Bridge/: BridgeTest.cpp  BridgeTest.h  CMakeLists.txt  DamageDealer.h  Druid.h  Healer.h  Monk.h  Paladin.h  PlayerClass.h  Role.h  Tank.h
Structural/Composite/: CMakeLists.txt  CompositeTest.cpp  CompositeTest.h  MiniRaid.h  Party.h  PlayerGroup.h  VanillaRaid.h
Structural/Decorator/: Armor.h  ArmorDecorator.h  ArmorItem.h  ArmorWithAC.h  ArmorWithEnchantment.h  ArmorWithSlot.h  ArmorWithSockets.h  CMakeLists.txt  DecoratorTest.cpp  DecoratorTest.h
Structural/Facade/: BossKiller.h  CMakeLists.txt  FacadeTest.cpp  FacadeTest.h  Paladin.h  PlayerClass.h  Priest.h  Rogue.h  Warlock.h  Warrior.h
Structural/Flyweight/: CMakeLists.txt  FlyWeightTest.cpp  FlyWeightTest.h  Human.h  HumanBaseStats.h  Orc.h  OrcBaseStats.h  PlayerRace.h
Structural/Proxy/: CMakeLists.txt  Healer.h  ProxyTest.cpp  ProxyTest.h  Shaman.h  ShamanPvpProxy.h
